add admin auction frontend

--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -54,6 +54,8 @@
                   a(href=`/admin/createSocialPost`) Create Social Post
                 li
                   a(href=`/admin/oneOffSocialPost`) One Off Social Post
+                li
+                  a(href=`/admin/adminAudit`) Admin Audit
 
           // pending section
           if user.role == 'admin' || user.role == 'moderator'
