--- a/views/public/recentComments.pug
+++ b/views/public/recentComments.pug
@@ -50,7 +50,7 @@ block content
                                     else if comment.upload.fileType == 'image'
                                         img.preview-image(src=comment.upload.uploadUrl)
                                     else if comment.upload.fileType == 'audio'
-                                        img.preview-image(src='/audio.svg')
+                                        img.preview-image(src='/images/images/audio.svg')
                                     else if comment.upload.fileType == 'unknown'
                                         img.preview-image(src='/no_img.png')
 
