--- a/views/public/search.pug
+++ b/views/public/search.pug
@@ -70,10 +70,10 @@ block content
                                       img.preview-image(src=`${uploadServer}/${upload.uploader.channelUrl}/${upload.uniqueTag}${upload.fileExtension}`)
 
                                   else if upload.fileType == 'audio'
-                                      img.preview-image(src='/audio.svg')
+                                      img.preview-image(src='/images/audio.svg')
 
                                   else if upload.fileType == 'unknown'
-                                      img.preview-image(src='/no_img.png')
+                                      img.preview-image(src='/images/no_img.png')
 
                                   div
                                       p.upload-title-text #{upload.title}
