--- a/views/account/subscriptions.pug
+++ b/views/account/subscriptions.pug
@@ -48,9 +48,9 @@ block content
                             // TODO: have to fix this
                             img.preview-image(src=`${'/uploads'}/${upload.uploader.channelUrl}/${upload.uniqueTag}${upload.fileExtension}` style="width:inherit;max-width:302px;")
                         else if upload.fileType == 'audio'
-                            img.preview-image(src='/audio.svg')
+                            img.preview-image(src='/images/audio.svg')
                         else if upload.fileType == 'unknown'
-                            img.preview-image(src='/no_img.png')
+                            img.preview-image(src='/images/no_img.png')
 
                         div
                             p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:6px;") #{upload.title}
