--- a/views/public/popularUploads.pug
+++ b/views/public/popularUploads.pug
@@ -190,10 +190,10 @@ block content
                         img.preview-image(src=`${uploadServer}/${upload.uploader.channelUrl}/${upload.uniqueTag}${upload.fileExtension}` style="width:inherit;max-width:302px;")
 
                     else if upload.fileType == 'audio'
-                        img.preview-image(src='/audio.svg')
+                        img.preview-image(src='/images/audio.svg')
 
                     else if upload.fileType == 'unknown'
-                        img.preview-image(src='/no_img.png')
+                        img.preview-image(src='/images/no_img.png')
 
                     div
                         p.balance-text.upload-title-text(style="width:100%;margin:0 auto;margin-top:6px;") #{upload.title}
