fix countdown timer

--- a/views/livestream/rtmp.pug
+++ b/views/livestream/rtmp.pug
@@ -85,8 +85,8 @@ block content
             });
           }
 
-          var usernamePicked = true;
-          // var usernamePicked = false;
+          // var usernamePicked = true;
+          var usernamePicked = false;
 
           var messagingUsername;
 
