almost done nodemailer

--- a/views/moderator/receivedEmails.pug
+++ b/views/moderator/receivedEmails.pug
@@ -13,4 +13,10 @@ block content
 
                 else
                     p= index + ': ' + val
+
+            if user.role == 'admin' && !email.responseSent
+                h1 Send Email
             br
+            br
+            br
+
