--- a/views/account/channel.pug
+++ b/views/account/channel.pug
@@ -94,7 +94,7 @@ block content
                 if user && user.role == 'admin'
                     br
                     br
-                    button.delete-account.btn.btn-danger Delete
+                    button.delete-account.btn.btn-danger Delete Account
                     button.delete-ips.btn.btn-danger Delete All Accounts / Ips
 
         br
@@ -196,6 +196,7 @@ block content
             button.btn-lg.button-success.change-rating(rating="sensitive") Mark As Sensitive
             button.btn-lg.button-success.change-rating(rating="mature") Mark As NSFW (Mature)
             button.btn-lg.button-success.change-rating(rating="allAges") Mark As SFW (AllAges)
+            button.btn-lg.btn-danger.delete-media-button Delete Media
 
     if user && user.role == 'admin'
         script.
@@ -210,6 +211,44 @@ block content
 
             var data = {
               rating: rating,
+              uploads: checkedValues,
+              csrf: csrf
+            }
+
+            $.ajax({
+              type: 'POST',
+              url: `/admin/changeRatings`, // todo: change to user filter
+              data,
+              success: function (data) {
+                if (data == 'success') {
+                  window.location.reload(true);
+                } else {
+                  swal("Something didn't work, please contact PewTube at ceo@pew.tube or via the widget in the bottom right corner")
+                }
+                console.log(data);
+              },
+              error: function (err) {
+                console.log(err);
+              }
+            });
+
+
+            console.log(rating);
+          })
+
+    // delete multiple media at once
+    if user && user.role == 'admin'
+        script.
+          $('.change-rating').on('click', function () {
+            var checkedValues = $('input:checkbox:checked').map(function () {
+              return this.value;
+            }).get();
+
+            var rating = $(this).attr('rating');
+            var csrf = '#{_csrf}'
+
+
+            var data = {
               uploads: checkedValues,
               csrf: csrf
             }
