--- a/views/media.pug
+++ b/views/media.pug
@@ -398,6 +398,35 @@ block content
       }
 
 
+    if user
+        script.
+            var userDefaultQuality = '#{user.defaultQuality}'
+
+            if (userDefaultQuality == 'high') {
+              $('.video-source').attr('src', highQualityVideo)
+              media = $(fileType)[0];
+              media.load();
+
+              $('#dropdownMenu1').text('Quality: High')
+              $('#dropdownMenu1').attr('quality', 'high');
+              $("#dropdownMenu1").append("<span class='caret'></span>");
+            }
+    else
+        script.
+          var siteVisitorDefaultQuality = '#{siteVisitor.defaultQuality}'
+
+          if (siteVisitorDefaultQuality == 'high') {
+            $('.video-source').attr('src', highQualityVideo)
+            media = $(fileType)[0];
+            media.load();
+
+            $('#dropdownMenu1').text('Quality: High')
+            $('#dropdownMenu1').attr('quality', 'high');
+            $("#dropdownMenu1").append("<span class='caret'></span>");
+          }
+
+
+
 
     script.
 
@@ -405,7 +434,6 @@ block content
 
         var lowQualityVideo = '#{uploadServer}/#{upload.uploader.channelUrl}/#{upload.uniqueTag}.mp4'
         var highQualityVideo = '#{uploadServer}/#{upload.uploader.channelUrl}/#{upload.uniqueTag}-high.mp4'
-
 
         var fileType = '#{upload.fileType}'
 
@@ -415,7 +443,21 @@ block content
 
         $('.low-quality').on('click', function(){
 
-          // TODO: change quality
+          var data = {
+            _csrf: csrf,
+          }
+
+          $.ajax({
+            type: 'POST',
+            url: '/api/changeUserDefaultQuality/low',
+            data,
+            success: function (data) {
+              console.log(data);
+            },
+            error: function (err) {
+              console.log(err);
+            }
+          });
 
           var quality = $('#dropdownMenu1').attr('quality');
           if(quality == 'low') return
@@ -436,7 +478,21 @@ block content
 
         $('.high-quality').on('click', function () {
 
-          // TODO: change quality
+          var data = {
+            _csrf: csrf,
+          }
+
+          $.ajax({
+            type: 'POST',
+            url: '/api/changeUserDefaultQuality/high',
+            data,
+            success: function (data) {
+              console.log(data);
+            },
+            error: function (err) {
+              console.log(err);
+            }
+          });
 
           var quality = $('#dropdownMenu1').attr('quality');
           if (quality == 'high') return
