--- a/views/admin/adminAudit.pug
+++ b/views/admin/adminAudit.pug
@@ -7,10 +7,25 @@ block content
             h2.view-header Users (Admin)
         hr
         each action in adminActions
-            each val, index in action
-                p= index + ': ' + val
+            p Admin Or Moderator: #{action.adminOrModerator.channelUrl}
+            if action.siteVisitorsAffected
+                for siteVisitor in action.siteVisitorsAffected
+                    p #{siteVisitor.channelUrl}
+            if action.uploadsAffected
+                for upload in action.uploadsAffected
+                    p Title Affected: #{upload.title}
+            if action.usersAffected
+                for user in action.usersAffected
+                    p User Affected: #{user.channelUrl}
+            p Action Type : #{action.actionType}
             br
             br
+
+
+            //each val, index in action
+            //    p= index + ': ' + val
+            //br
+            //br
         //
         //each comment in adminActions
         //    div.col-sm-4(style="text-align:center;height:420px;border:1px solid black;")
